--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,12 @@
 [build]
 builder = "nixpacks"
+buildCommand = "go build -o main ./cmd/api"
 
 [deploy]
-startCommand = "cd cmd/api && go run main.go"
+startCommand = "./main"
 
 [[services]]
 name = "hots-api"
-port = 8081
 
 [services.envs]
 PORT = "8081"
