Fix Railway deployment configuration - use go run directly

--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "go build -o main ./cmd/api"
 
 [deploy]
-startCommand = "./main"
+startCommand = "go run cmd/api/main.go"
 
 [[services]]
 name = "hots-api"
