--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "go run cmd/api/main.go"
+startCommand = "./app"
 
 [[services]]
 name = "hots-api"
