--- a/data-collector/package.json
+++ b/data-collector/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "collect": "node src/manual-trigger.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
